Fix bad left right alignment on solo card

--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,9 @@ body {
             }
         }
     }
+    .ui.one.cards>.card {
+        margin: 0;
+    }
 }
 
 .footer {
